         tape2wav.1,tapeconv.1,tzxlist.1}: document --help and --version options
         (Sergio).
20150502 rzxdump.c,scl2trd.c: fix exit code when passed bad operands (Sergio).
20150503 tapeconv.c: remove double spacing and "the the" in help (thanks, 
         Stuart) (Sergio).
20150505 createhdf.c,fmfconv.c,listbasic.c,profile2map.c,raw2hdf.c,rzxcheck.c,
         rzxdump.c,rzxtool.c,scl2trd.c,snap2tzx.c,snapconv.c,tape2wav.c,
         tapeconv.c,tzxlist.c: reduce the number of unique strings (thanks,
         Stuart) (Sergio).
20150510 Makefile.am: use variables for flags rather than direct substitutions
         (Sergio).
20150510 m4/{Makefile.am,pkg.m4}: add pkg.m4 for PKG_CHECK_MODULES in case the
         platform doesn't have pkg-config installed (Sergio).
20150512 fmfconv_ff.c,rzxtool.c: avoid mixing declarations and code for C89
         compilers (Adrien Destugues).
20150517 audio2tape.cc: use char* for progname for consistency with utils.c
         (thanks, Stuart) (Fred).
20150517 fmfconv.c,fmfconv_avi.c: remove a couple more warnings (Fred).
20150517 tape2wav.c: abs() takes an int so use atoi() to match types (Fred).
20150527 compat.h,compat/{amiga/{basename.c,osname.c},unix/{basename.c,
         osname.c},win32/osname.c}: add missing includes (Stuart).
20150527 createhdf.c,fmfconv.c,fmfconv_aiff.c,fmfconv_au.c,fmfconv_avi.c,
         fmfconv_ff.c,fmfconv_jpg.c,fmfconv_wav.c,fmfconv_yuv.c,raw2hdf.c,
         snap2tzx.c: add static to functions where appropriate (Stuart).
20150613 m4/ax_create_stdint_h.m4: add AX_CREATE_STDINT_H macro from the GNU
         Autoconf Archive (Stuart).
20150617 Makefile.am: enable silent rules for windres commands (Sergio).
20151201 fmfconv.c,fmfconv_avi.c: ensure AVI files are finalised and delete
         the index file on Windows (Sergio).
20151229 Makefile.am,configure.ac,fmfconv.[ch],fmfconv_ff.c,man/fmfconv.1: drop
         FFmpeg/Libav API support in fmfconv (patch #345) (Sergio).